# saves-model-v3

./: .gitignore  AUTOMATION.md  BETTING_LINES_REQUIREMENTS.md  BETTING_TRACKER_README.md  CLASSIFICATION_MIGRATION_GUIDE.md  CONFIG_5419_INTEGRATION.md  DATE_SHEET_MIGRATION.md  MOBILE.md  MODEL_AUDIT_REPORT.md  QUICKSTART.md  README.md  betting_tracker.xlsx  data_fetching_template.py  missing-features.txt  pyproject.toml  requirements.txt  training_feature_order_config_5419.txt
config/: config.yaml  feature_config.yaml  model_config.yaml
data/: betting.db
docs/: BREAKTHROUGH_MODEL_PLAN.md  CURRENT_HISTORICAL_DATA.md  HISTORICAL_DATA_ANALYSIS.md  MODEL_ISSUES_AND_FIXES.md  MODEL_TRAINING_GUIDE.md  OFFSEASON_OPTIMIZATION_PLAN.md  PREREGISTRATION_NO_CREDIT_ABLATIONS.md  WORKFLOW_MODERNIZATION_PROPOSAL.md  betting_tracker-old.xlsx
models/: classifier_feature_names.json  classifier_metadata.json  classifier_model.json
scripts/: add_manual_lines.py  add_market_features.py  add_tracking_tables.py  audit_2526_bettime_saves_fill.py  audit_alt_ladder_pilot.py  audit_core_bettime_passes.py  audit_w1_probe.py  betting_dashboard.py  build_core_bettime_pass_snapshots.py  build_game_context_features.py  build_market_game_features.py  build_multibook_training_data.py  build_odds_snapshots.py  build_pace_features.py  build_saves_fill_2526_snapshots.py  calibrate_model.py  clv_audit_pace_policy.py  clv_report.py  collect_historical_data.py  compute_closing_clv.py  create_clean_features.py  create_features.py  debug_today_predictions.py  experiment_11_frozen_origin_b_p2.py  experiment_12_w1_cross_market.py  experiment_12_w1_cross_market_confirmation.py  experiment_12r_w1_cross_market_recovery.py  experiment_13_w2_dfs_venue_history.py  experiment_14_w6_betonline_convergence.py  experiment_15_w3_microstructure.py  experiment_16_alt_ladder_pilot.py  experiment_cross_line_pricing.py  (+49 more)
(+249 files in other folders)
