[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saves-model-v3"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # Core data / ML
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # File formats / storage
    "openpyxl>=3.1.2",
    "pyarrow>=13.0.0",
    "pyyaml>=6.0",

    # Utilities
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",

    # Explainability / analysis
    "shap>=0.43.0",

    # Dev / notebooks / testing
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
]

[tool.setuptools]
packages = []
